fixed css classes

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
     <div id="topnav" class="row bg-nav-top pt-lg-1 d-none d-lg-flex">
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
             <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                <h2 class="logo-font text-black my-0">
+                <h2 class="text-black my-0">
                     One Stop Shop!
                 </h2>
             </a>
@@ -73,7 +73,7 @@
                     <div class="dropdown-menu border-0" aria-labelledby="user-options">
                         {% if request.user.is_authenticated %}
                             {% if request.user.is_superuser %}
-                                <a href="{% url 'add_a_product' %}" class="dropdown-item">Product Management</a>
+                                <a href="{% url 'add_a_product' %}" class="dropdown-item">Add A Product</a>
                             {% endif %}
                             <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                             <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
