--- a/bag/templates/bag/shopping-bag.html
+++ b/bag/templates/bag/shopping-bag.html
@@ -15,108 +15,106 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container content-container">
+    <div class="container content-container shopping-page">
         <div class="row">
             <div class="col text-center">
-                <h2 class="mt-3 mb-4">Shopping Bag</h2>
+                {% if product_count == 0 %}
+                    <h2 class="mt-3 mb-4">Your Shopping Bag</h2>
+                {% elif product_count == 1 %}
+                    <h2 class="mt-3 mb-4">Your Shopping Bag - {{ product_count }} Item</h2>
+                {% else %}
+                    <h2 class="mt-3 mb-4">Your Shopping Bag - {{ product_count }} Items</h2>
+                {% endif %}
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col shopping-bag">
                 {% if bag_items %}
-                    <div class="table-responsive rounded">
+                <!-- This div gives a different view to the user if they are on mobile as the table is too big for seamless design -->
+                    <div class="d-block d-md-none">
+                        <div class="row">
+                            <div class="col-12">
+                                {% include 'bag/shopping-bag-total.html' %}
+                                <hr>
+                                <small class="text-muted">To review your order, scroll down!</small>
+                                <hr>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 checkout-buttons">
+                                {% include 'bag/shopping-bag-checkout-buttons.html' %}
+                            </div>
+                        </div>
+                        {% for item in bag_items %}
+                            <div class="row">
+                                <div class="col-12 pb-3">
+                                    {% include "bag/shopping-bag-product-pic.html" %}
+                                </div>
+                                <div class="col-12 py-3">
+                                    {% include "bag/shopping-bag-product-info.html" %}
+                                </div>
+                                <div class="col-12 pt-3 mb-0">
+                                    <p class="my-0">Price Each: ${{ item.product.price }}</p>
+                                    <p><strong>Subtotal:</strong> ${{ item.product.price | calc_subtotal:item.quantity }}</p>
+                                </div>
+                                 <div class="col-12">
+                                {% include "bag/shopping-bag-quantity-form.html" %}
+                                <a title="Click here to remove from basket" class="remove-item float-right pt-1" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><i class="far fa-times-circle"></i></a>
+                            </div>
+                            </div>
+                            <hr>
+                        {% endfor %}
+                        <div class="btt-button">
+                            <a class="btt-link d-flex h-100">
+                                <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="table-responsive rounded d-none d-md-block">
                         <table class="table table-sm table-boarderless">
-                        <thead class="text-black">
+                        <thead class="text-black text-center">
                             <tr>
-                                <th scope="col">Product Info</th>
+                                <th scope="col"></th>
                                 <th scope="col"></th>
                                 <th scope="col">Price</th>
                                 <th scope="col">Qty</th>
                                 <th scope="col">Subtotal</th>
+                                <th scope="col"></th>
                             </tr>
                         </thead>
                         {% for item in bag_items %}
                             <tr>
                                 <td class="p-3 w-25">
-                                    {% if item.product.image %}
-                                        <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}" class="img-fluid rounded">
-                                    {% else %}
-                                        <img src="{{ MEDIA_URL }}noimage.jpg" alt="{{ item.product.name }}" class="img-fluid rounded">
-                                    {% endif %}
+                                    {% include 'bag/shopping-bag-product-pic.html' %}
                                 </td>
                                 <td class="py-3">
-                                    <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-                                    <p class="my-0"><strong>Size: </strong>{% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>
-                                    <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
-
+                                    {% include 'bag/shopping-bag-product-info.html' %}
                                 </td>
                                 <td class="py-3">
                                     <p class="my-0"> ${{ item.product.price }}</p>
                                 </td>
                                 <td class="py-3">
-                                    <form class="form update-form" method="POST" action="{% url 'modify_bag' item.item_id %}">
-                                    {% csrf_token %}
-                                        <div class="form-group">
-                                            <div class="input-group">
-                                                <div class="input-group-prepend">
-                                                    <button class="decrement-qty btn btn-sm btn-black rounded-0"
-                                                        data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
-                                                        <span>
-                                                            <i class="fas fa-minus fa-sm"></i>
-                                                        </span>
-                                                    </button>
-                                                </div>
-                                                <input class="form-control form-control-sm qty_input" type="number"
-                                                    name="quantity" value="{{ item.quantity }}" min="1" max="90"
-                                                    data-item_id="{{ item.item_id }}"
-                                                    id="id_qty_{{ item.item_id }}">
-                                                <div class="input-group-append">
-                                                    <button class="increment-qty btn btn-sm btn-black rounded-0"
-                                                        data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
-                                                        <span>
-                                                            <i class="fas fa-plus fa-sm"></i>
-                                                        </span>
-                                                    </button>
-                                                </div>
-                                                {% if item.product.has_sizes %}
-                                                    <input type="hidden" name="product_size" value="{{ item.size }}">
-                                                {% endif %}
-                                            </div>
-                                        </div>
-                                    </form>
-                                    <a class="update-link text-info"><small>Update</small></a>
-                                    <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>
+                                    {% include 'bag/shopping-bag-quantity-form.html' %}                                    
                                 </td>
                                 <td class="py-3">
                                     <p class="my-0">${{ item.product.price | calc_subtotal:item.quantity }}</p>
+                                </td>
+                                <td>
+                                    <a title="Click here to remove from basket" class="remove-item pt-1" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><i class="far fa-times-circle"></i></a>
                                 </td>
                             </tr>
                         {% endfor %}
                         <tr>
                             <td colspan="5" class="pt-5 text-right">
-                               <h6><strong>Bag Total: ${{ total|floatformat:2 }}</strong></h6>
-                                <h6>Delivery: Always Free!</h6>
-                                <h4 class="mt-4"><strong>Grand Total: ${{ total|floatformat:2 }}</strong></h4>
+                                {% include 'bag/shopping-bag-total.html' %}
                             </td>
                         </tr>
                         <tr>
                             <td colspan="5" class="text-right">
-                                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                                    <span class="icon">
-                                        <i class="fas fa-chevron-left"></i>
-                                    </span>
-                                    <span class="text-uppercase">
-                                        Keep Shopping!
-                                    </span>
-                                </a>
-                                <a href="{% url 'checkout' %}" class="btn form-button btn-lg">
-                                    <span class="text-uppercase"> Continue to Secure Checkout</span>
-                                    <span class="icon">
-                                        <i class="fas fa-lock"></i>
-                                    </span>
-                                </a>
+                                {% include 'bag/shopping-bag-checkout-buttons.html' %}                                    
                             </td>
-                        </tr>         
+                        </tr>        
                     </table>
                     </div>
                 {% else %}
@@ -135,6 +133,13 @@
 
 {% block postloadjs %}
 {{ block.super }}
+
+<script type="text/javascript">
+    $('.btt-link').click(function(e) {
+        window.scrollTo(0,0)
+    })
+</script>
+
 {% include 'products/includes/quantity_script.html' %}
 
 <script type="text/javascript">
