styled, changed icon and back to top button

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -76,7 +76,7 @@
                                             {% if product.category %}
                                             <p class="small mt-1 mb-0">
                                                 <a href="{% url 'products' %}?category={{ product.category.name }}" class="text-muted">
-                                                    <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                                                    <i class="fas fa-list-ul mr-1"></i>{{ product.category.friendly_name }}
                                                 </a>
                                             </p>
                                             {% endif %}
@@ -122,7 +122,7 @@
             </div>
         </div>
     </div>
-    <div class="btt-button shadow-sm rounded-0 border border-black">
+    <div class="btt-button">
         <a class="btt-link d-flex h-100">
             <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
         </a>
