--- a/products/templates/products/single_product_detail.html
+++ b/products/templates/products/single_product_detail.html
@@ -33,35 +33,43 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="mb-5 mt-md-5">
-                    <p class="mb-0 text-right">{{ product.name }}</p>
-                    <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                    <p class="mb-0 text-center">{{ product.name }}</p>
+                    <hr>
+                    <p class="mt-3 text-left">{{ product.description }}</p>
+                    <p class="lead mb-0 text-right font-weight-bold">${{ product.price }}</p>
                     {% if product.category %}
-                        <p class="small mt-1 mb-0">
+                        <p class="small mt-1 mb-0 text-right">
                             <a href="{% url 'products' %}?category={{ product.category.name }}" class="text-muted">
                                 <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
                             </a>
                         </p>
                     {% endif %}
                     {% if product.rating %}
-                        <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                        <p class="text-right text-muted">
+                            <small><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                        </p>
                     {% else %}
-                        <small class="text-muted">No Rating</small>
+                        <p class="text-right text-muted">
+                            <small class="text-muted text-right">No Rating</small>
+                        </p>
                     {% endif %}
                     {% if request.user.is_superuser %}
-                        <small class="ml-3">
-                            <a href="{% url 'edit_a_product' product.id %}">Edit</a> |
-                            <a href="{% url 'delete_a_product' product.id %}" class="text-danger">Delete</a>
-                        </small>
+                        <p class="text-center">
+                            <small class="ml-3">
+                                <a href="{% url 'edit_a_product' product.id %}">Edit</a> |
+                                <a href="{% url 'delete_a_product' product.id %}" class="text-danger">Delete</a>
+                            </small>
+                        </p>
                     {% endif %}
-                    <p class="mt-3 text-right">{{ product.description }}</p>
+                    
                     <form class="form" action="{% url 'add_item_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
                              {% with product.has_sizes as s %}
                              {% if s %}
-                                <div class="col-12">
+                                <div class="col-12 mt-3 text-center">
                                     <p><strong>Size:</strong></p>
-                                    <select name="product_size" id="id_product_size" class="form-control rounded-0 w-50">
+                                    <select name="product_size" id="id_product_size" class="form-control text-center rounded-0 w-10">
                                         <option value="xs">XS</option>
                                         <option value="s">S</option>
                                         <option value="m" selected>M</option>
@@ -71,12 +79,12 @@
                                 </div>
                              {% endif %}
                             <div class="col-12">
-                                <p class="mt-3">
+                                <p class="mt-3 text-center">
                                     <strong>
                                         Quantity:
                                     </strong>
                                 </p>
-                                <div class="form-group w-50">
+                                <div class="form-group w-100">
                                     <div class="input-group">
                                         <div class="input-group-prepend">
                                             <button class="decrement-qty btn btn-black rounded-0"
@@ -101,8 +109,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col{% if s %}-12 mt-2{% endif %}">
-                                <a href="{% url 'products' %}" class="btn rounded-0 mt-5">
+                            <div class="col{% if s %}-12 text-center{% endif %}">
+                                <a href="{% url 'products' %}" class="btn rounded-0 mt-3 px-0">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
                                     </span>
@@ -110,7 +118,7 @@
                                         Keep Shopping
                                     </span>
                                 </a>
-                                <input type="submit" class="btn form-button text-uppercase mt-5" value="Add to Bag">
+                                <input type="submit" class="btn form-button text-uppercase mt-3" value="Add to Bag">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             {% endwith %}
