--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -60,12 +60,12 @@
                     </div>
                 {% endfor %}
                 <hr class="my-0">
-                <div class="row text-black text-right">
+                <div class="row text-black text-left">
                     <div class="col-7 offset-2">
                         <p class="my-0">Order Total:</p>
                         <p class="my-0">Grand Total:</p>
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 text-right">
                         <p class="my-0">${{ total | floatformat:2 }}</p>
                         <p class="my-0"><strong>${{ total | floatformat:2 }}</strong></p>
                     </div>
