--- a/products/templates/products/single_product_detail.html
+++ b/products/templates/products/single_product_detail.html
@@ -33,9 +33,10 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="mb-5 mt-md-5">
-                    <p class="mb-0 text-center">{{ product.name }}</p>
+                    <h5 class="mb-0 text-center">{{ product.name }}</h5>
                     <hr>
                     <p class="mt-3 text-left">{{ product.description }}</p>
+                    <hr>
                     <p class="lead mb-0 text-right font-weight-bold">${{ product.price }}</p>
                     {% if product.category %}
                         <p class="small mt-1 mb-0 text-right">
@@ -53,6 +54,7 @@
                             <small class="text-muted text-right">No Rating</small>
                         </p>
                     {% endif %}
+                    <hr>
                     {% if request.user.is_superuser %}
                         <p class="text-center">
                             <small class="ml-3">
@@ -109,7 +111,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col{% if s %}-12 text-center{% endif %}">
+                            <div class="col-12 text-center">
                                 <a href="{% url 'products' %}" class="btn rounded-0 mt-3 px-0">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
