fixed aria-labelledby tags

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -45,7 +45,7 @@
             <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="home-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Home
             </a>
-            <div class="dropdown-menu dropdown-border" aria-labelledby="specials-link">
+            <div class="dropdown-menu dropdown-border" aria-labelledby="home-products-link">
                 <a href="{% url 'products' %}?category=kitchen" class="dropdown-item">Kitchen</a>
                 <a href="{% url 'products' %}?category=living_room" class="dropdown-item">Living Room</a>
                 <a href="{% url 'products' %}?category=bedroom" class="dropdown-item">Bedroom</a>
@@ -57,7 +57,7 @@
             <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="electronics-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Electronics
             </a>
-            <div class="dropdown-menu dropdown-border" aria-labelledby="specials-link">
+            <div class="dropdown-menu dropdown-border" aria-labelledby="electronics-link">
                 <a href="{% url 'products' %}?category=tvs" class="dropdown-item">TVs</a>
                 <a href="{% url 'products' %}?category=games_consoles" class="dropdown-item">Games Consoles</a>
                 <a href="{% url 'products' %}?category=laptops" class="dropdown-item">Laptops</a>
@@ -75,7 +75,7 @@
             <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="news-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 News
             </a>
-            <div class="dropdown-menu dropdown-border" aria-labelledby="specials-link">
+            <div class="dropdown-menu dropdown-border" aria-labelledby="news-link">
                 <a href="{% url 'news' %}" class="dropdown-item">View All</a>
                 <a href="{% url 'add_news' %}" class="dropdown-item">Add Entry</a>
             </div>
