fixed aria-labelledby tags

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -21,7 +21,7 @@
             <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="mens-section-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Mens Section
             </a>
-            <div class="dropdown-menu dropdown-border" aria-labelledby="mens-clothing-link">
+            <div class="dropdown-menu dropdown-border" aria-labelledby="mens-section-link">
                 <a href="{% url 'products' %}?category=mens_jeans" class="dropdown-item">Jeans &amp; Trousers</a>
                 <a href="{% url 'products' %}?category=mens_tops" class="dropdown-item">Tops &amp; Shirts</a>
                 <a href="{% url 'products' %}?category=mens_acc" class="dropdown-item">Accessories</a>
@@ -33,7 +33,7 @@
             <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="womens-section-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Womens Section
             </a>
-            <div class="dropdown-menu dropdown-border" aria-labelledby="womens-clothing-link">
+            <div class="dropdown-menu dropdown-border" aria-labelledby="womens-section-link">
                 <a href="{% url 'products' %}?category=womens_jeans" class="dropdown-item">Jeans &amp; Trousers</a>
                 <a href="{% url 'products' %}?category=womens_tops" class="dropdown-item">Tops &amp; Shirts</a>
                 <a href="{% url 'products' %}?category=womens_acc" class="dropdown-item">Accessories</a>
