edited for html validator

--- a/templates/base.html
+++ b/templates/base.html
@@ -153,7 +153,7 @@
 
 
 {% block postloadjs %}
-<script type="text/javascript">
+<script>
     $('.toast').toast('show');
 </script>
 {% endblock %}
