--- a/templates/includes/mobile-header.html
+++ b/templates/includes/mobile-header.html
@@ -1,4 +1,4 @@
-<li class="list-inline-item">
+<div class="list-inline-item">
     <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
             <div><i class="fas fa-search fa-lg"></i></div>
@@ -19,8 +19,8 @@
             </div>
         </form>
     </div>
-</li>
-<li class="list-inline-item dropdown">
+</div>
+<div class="list-inline-item dropdown">
     <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
             <div><i class="fas fa-user fa-lg"></i></div>
@@ -39,8 +39,8 @@
             <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
         {% endif %}
     </div>
-</li>
-<li class="list-inline-item">
+</div>
+<div class="list-inline-item">
     <a class="text-black nav-link d-block d-lg-none" href="{% url 'view_shopping_bag' %}">
         <div class="text-center">
             <div><i class="fas fa-shopping-bag fa-lg"></i></div>
@@ -53,4 +53,4 @@
             </p>
         </div>
     </a>
-</li>
+</div>
