--- a/bag/templates/bag/shopping-bag-checkout-buttons.html
+++ b/bag/templates/bag/shopping-bag-checkout-buttons.html
@@ -1,3 +1,5 @@
+<!-- Responsible for Shopping Bag Buttons -->
+
 <div class="row text-center">
     <div class="col-sm-12 col-md-6 order-1 order-md-2 mt-4">
         <a href="{% url 'checkout' %}" class="btn form-button">
