added extra comments

--- a/bag/templates/bag/shopping-bag-product-pic.html
+++ b/bag/templates/bag/shopping-bag-product-pic.html
@@ -1,3 +1,5 @@
+<!-- Responsible for the images in the Shopping Bag -->
+
 {% if item.product.image %}
     <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}" class="img-fluid rounded">
 {% else %}
