added extra comments

--- a/bag/templates/bag/shopping-bag-total.html
+++ b/bag/templates/bag/shopping-bag-total.html
@@ -1,3 +1,5 @@
+<!-- Responsible for Shopping Bags total -->
+
 <h6><strong>Bag Total: ${{ total|floatformat:2 }}</strong></h6>
 <h6>Delivery: Always Free!</h6>
 <h4 class="mt-4 text-center"><strong>Grand Total: ${{ total|floatformat:2 }}</strong></h4>
