added extra comments

--- a/checkout/templates/checkout/checkout_complete.html
+++ b/checkout/templates/checkout/checkout_complete.html
@@ -18,6 +18,7 @@
 <div class="container content-container">
     <div class="row">
         <div class="col">
+            <!-- This statement checks to see if user has come from their profile page -->
             {% if from_profile %}
                 <h2 class="text-center my-4">View Order History</h2>
             {% else %}
