added extra comments

--- a/news/templates/news/news.html
+++ b/news/templates/news/news.html
@@ -17,6 +17,7 @@
 
 {% block content %}
 <div class="container content-container">
+    <!-- Each news article is rendered through the loop and presented to user -->
     {% for n in news %}
         <div class="row">
             <div class="col-12 text-center">
