--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -56,10 +56,12 @@
                     </div>
                 </div>
                 <div class="row">
+                    <!-- Each product is displayed in through this for loop -->
                     {% for product in products %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card h-100 ">
                                 {% if product.image %}
+                                <!-- Each image acts as a link to view more of the products details -->
                                     <a href="{% url 'single_product_detail' product.id %}">
                                         <img class="card-img img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                                     </a>
